publish over ssh

--- a/ansible-dev/Jenkinsfile
+++ b/ansible-dev/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
     stages{
         stage('zip the file'){
             steps{
-                sh 'rm -rf ansible-${BUILD_ID}.zip || echo ""' 
+                sh 'rm -rf *.zip|| echo ""' 
                 sh 'zip -r ansible-${BUILD_ID}.zip * --exclude Jenkinsfile'
             }
         }
