--- a/ansible-dev/config.yml
+++ b/ansible-dev/config.yml
@@ -2,19 +2,32 @@
 - hosts: all
   become: yes
   vars: 
-    packages: [ "lsof", "wget", "passwd", "docker", "unzip", "java-17*" ]
+    packages: ["lsof", "wget", "passwd", "docker", "unzip", "java-17*"]
   tasks:
-     - name: Install package on RedHat family
-       yum: name={{ item }} state=latest
-       with_items: packages
-     - name: Start docker daemon
-       service:
-          name: docker
-          state: started
-          enabled: yes
-       when: ansible_os_family=="RedHat"  
+    - name: Install packages on RedHat family
+      yum:
+        name: "{{ item }}"
+        state: latest
+      loop: "{{ packages }}"
+      when: ansible_os_family == "RedHat"
 
-     - name:   Install package on Ubuntu family
-       apt: name={{ item }} state==latest
-       with_items: packages
-       when: ansible_os_family=="RedHat"
+    - name: Start Docker daemon on RedHat family
+      service:
+        name: docker
+        state: started
+        enabled: yes
+      when: ansible_os_family == "RedHat"
+
+    - name: Install packages on Ubuntu family
+      apt:
+        name: "{{ item }}"
+        state: latest
+      loop: "{{ packages }}"
+      when: ansible_os_family == "Debian"
+
+    - name: Start Docker daemon on Ubuntu family
+      service:
+        name: docker
+        state: started
+        enabled: yes
+      when: ansible_os_family == "Debian"
