--- a/ansible-dev/Jenkinsfile
+++ b/ansible-dev/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline{
         stage('upload artifacts to jfrog'){
             steps{
                 sh 'curl -uadmin:AP8JrETP4pkpQEdKpLHxJwhVieo -T \
-                ansible-${BUILD_ID.zip} \
+                ansible-${BUILD_ID}.zip \
                 "http://ec2-44-202-66-32.compute-1.amazonaws.com:8081/artifactory/ansible/ansible-${BUILD_ID}.zip"'
             }
         }
