--- a/ansible-dev/qa-deploy.yml
+++ b/ansible-dev/qa-deploy.yml
@@ -11,8 +11,15 @@
 
     - name: Get the PID
       shell: lsof -i :8082
+      tags:
+        - a
       register: pid_output
-
+    - name: print pid_output
+      debug:
+        var: pid_output
+      tags:
+        - b  
+        
     - name: Kill Running App
       shell: kill -9 "{{ pid_output.stdout }}"
       when: pid_output.stdout != ''
